# penguin-tamer

./: .cmd_history  .gitignore  .notes.md  AUTO_FIX_REPORT.md  CHANGELOG_INSTALL.md  CHANGES_SUMMARY.py  CONFIG_MENU_README.md  DEBUG_PHASES.md  DEMO_SYSTEM_NULL_OBJECT.md  DUPLICATE_FIX.md  FEATURE_COMMAND_CONTEXT.md  FLAKE8_FIXES_FINAL.md  FLAKE8_FULL_REPORT.md  FLAKE8_REPORT.md  GIT_HOOKS_INFO.md  LOCALIZATION_COMMAND_CONTEXT.md  MIGRATION_COMPLETE.md  MIGRATION_NOTES.md  README  README.md  REFACTORING_ANALYSIS.md  REFACTORING_CLI_CONSOLE.md  REFACTORING_CLI_DIALOG.md  REFACTORING_LLMCLIENT.md  REFACTORING_MODELS_API.md  REFACTORING_RESULT.md  REFACTORING_SAFE_APPROACH.md  REFACTORING_STEPS.md  SPINNER_DEBUG.md  SPINNER_FIX_WITH_ARGS.md  SPINNER_SUMMARY.md  STREAMING_OUTPUT_RESTORE.md  TIMING_CONFIG_EXPLANATION.md  ai.py  app.py  create_alias.sh  demo_streaming.py  fix_flake8.sh  formatter_text.py  install.sh  (+38 more)
.github/workflows/: build.yml  release.yml
ai-bash/: __init__.py
backup_ai-ebash/: check_pep8.py  demo_dot_commands.py  rebrand.py  setup.cfg  setup.py  test_ctrl_c.py
debian/: changelog  control  postinst  prerm
docs/: DEBUG_GUIDE.md  DEBUG_QUICK_REF.md  DEMO_FINISH_STRING.md  DEMO_MIGRATION_PLAY_FIRST_INPUT.md  DEMO_ROBOT_MODE.md  DEMO_TWO_PHASE_SPINNER.md  GIT_HOOKS.md  GIT_HOOKS_QUICKSTART.md  INSTALL_BEHAVIOR.md  LLM_PARAMS_QUICK.md  NEW_PARAMETERS_SUMMARY.md  ROBOT_MODE_IMPLEMENTATION.md  ROBOT_MODE_QUICK.md  ROBOT_MODE_v1.1.0_CHANGELOG.md  ROBOT_MODE_v1.2.0_CHANGELOG.md  ROBOT_MODE_v1.3.0_CHANGELOG.md  TEXTUAL_CONFIG_MENU.md  TEXTUAL_QUICKSTART.md  TROUBLESHOOTING_ALIAS_ru.md
docs/locales/: README_ru.md
photoshop/: Без имени-1-восстановлено.psd  Без имени-2-восстановлено.psd  Без имени-3-восстановлено.psd  Без имени-4-восстановлено.psd  Без имени-5-восстановлено.psd  Без имени-6-восстановлено.psd
source/: ai.py  api_client.py  block_runner.py  settings.py
src/aibash/: __main__.py  settings.py
src/aiebash/: .OLD-ai.py  FIX_BadIdentifier.md  README_config_manager.md  README_config_menu.md  __main__.py  api_client.py  arguments.py  chat.py  config_manager.py  config_menu.py  default_client.py  default_config.json  default_config.yaml  error_handling.py  error_messages.py  formatter_text.py  llm_chat.py  (+8 more)
temp_dist/: ai_ebash-0.5.0.dev13-py3-none-any.whl
tests/: TEST_EXECUTOR_FIXES.md  conftest.py  test_cli_integration.py  test_demo_recorder.py  test_error_messages.py  test_formatter_text.py  test_llm_client.py  test_menu_i18n.py  test_text_utils.py
(+59 files in other folders)
