[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bash"
version = "0.1.0"
description = "CLI утилита AI для терминала"
authors = [
  {name = "Andrey", email = "andrey.bch.1976@gmail.com"}
]
requires-python = ">=3.10"
dependencies = ["requests"]
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
# Объявляем CLI-команду ai
ai = "ai_bash.ai:main"
