[metadata]
name = ai-bash
version = 0.1.0
author = Your Name
description = AI Bash CLI utility
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    -r requirements.txt

[options.entry_points]
console_scripts =
    ai = ai_bash.__main__:main

[options.packages.find]
where = src
