[metadata]
name = ai-bash
version = 0.1.2
author = Andrey Bochkarev
author_email = andrey.bch.1976@gmail.com
description = Console utility for integrating artificial intelligence into a Linux terminal. 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.9
install_requires =
    markdown-it-py==3.0.0
    mdurl==0.1.2
    platformdirs==4.4.0
    Pygments==2.19.2
    rich==14.1.0


[options.entry_points]
console_scripts =
    ai = aibash.__main__:main

[options.packages.find]
where = src
