[metadata]
name = penguin-tamer
author = Andrey Bochkarev
author_email = andrey.bch.1976@gmail.com
description = Penguin Tamer - AI-powered terminal assistant for Linux systems 
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
include_package_data = True
packages = find:
package_dir =
    =src
python_requires = >=3.11
install_requires =
    certifi==2025.8.3
    charset-normalizer==3.4.3
    idna==3.10
    markdown-it-py==3.0.0
    mdurl==0.1.2
    platformdirs==4.4.0
    Pygments==2.19.2
    requests==2.32.5
    rich==14.1.0
    urllib3==2.5.0
    openai==1.108.0
    PyYAML==6.0.2
    inquirer==3.4.0
    prompt-toolkit==3.0.52



[options.package_data]
penguin_tamer = *.yaml, locales/*.json

[options.entry_points]
console_scripts =
    pt = penguin_tamer.__main__:main

[options.packages.find]
where = src
exclude =
    penguin_tamer.tests
